[package]
name = "simcue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
serde_json = "1.0.99"
uuid = { version = "1.4.0", features = ['v4'] }
http-body-util = "0.1.0-rc.2"
toml = "0.7.5"
keyed_priority_queue = "0.4.1"
simple_logger = "4.2.0"
log = "0.4.19"
